feat: add dummy json data, edit ticker, connect graphs using axios to dummy data

--- a/client/src/ui/ScrollingTicker.css
+++ b/client/src/ui/ScrollingTicker.css
@@ -1,5 +1,5 @@
 .ticker-wrapper {
-    position: absolute;
+    position: fixed;
     z-index: 5;
     bottom: 0;
     left: 0;
@@ -8,4 +8,8 @@
     font-size: 0.7rem;
     background-color: #303030;
     color: white;
+}
+
+.ticker-wrapper span {
+    margin-left: 3rem;
 }
