feat: add deposit and withraw dialog, call dummy data with axios

--- a/client/src/views/Home.css
+++ b/client/src/views/Home.css
@@ -11,7 +11,8 @@
 }
 
 .portfolio-chart div,
-.portfolio-holder div {
+.portfolio-holder div,
+.MuiDialog-container div {
     background-color: #424242;
     color: white;
 }
