--- a/client/src/ui/ScrollingTicker.css
+++ b/client/src/ui/ScrollingTicker.css
@@ -1,10 +1,10 @@
 .ticker-wrapper {
     position: fixed;
     z-index: 5;
-    bottom: 0;
+    top: 50px;
     left: 0;
     width: 100%;
-    height: 2rem;
+    height: 2.8rem;
     font-size: 0.7rem;
     background-color: #303030;
     color: white;
