--- a/client/src/views/Home.css
+++ b/client/src/views/Home.css
@@ -1,6 +1,8 @@
 .home {
     display: flex;
-    padding: 2rem;
+    padding-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .portfolio-holder {
